tests/NormalTests/paczka2/big_fuzzy/10093433.err
Error in line 7: NnF A850 56,6
Error in line 13: POKjnMczzy A231 167,6
Error in line 16: A850 A231 34,2
Error in line 9: NnF A265 88,0
Error in line 28: GRyt A231 10,4
Error in line 42: GRyt A850 18,0
Error in line 44: t4t59fOGP19 S604 45,8
Error in line 46: POKjnMczzy A265 748,4
Error in line 43: GRyt A231 25,6
Error in line 52: t4t59fOGP19 S604 13,9
Error in line 60: GRyt A231 52,2
Error in line 56: A850 A231 99,8
Error in line 74: POKjnMczzy A265 59,4
Error in line 86: GRyt A231 91,3
Error in line 87: fiSrRwi3c8f S604 91,2
Error in line 94: GRyt S604 93,11
Error in line 92: fiSrRwi3c8f A850 80,9
Error in line 97: fiSrRwi3c8f S604 92,9
Error in line 93: GRyt S604 56,1
Error in line 96: NnF A231 193,8
Error in line 95: 6E2yCTpL A231 24,2
Error in line 106: A850 A231 27,6
Error in line 109: A850 A265 281,7
Error in line 114: GRyt A231 98,7
Error in line 113: fiSrRwi3c8f A265 80,6
Error in line 119: 6E2yCTpL A265 65,53
Error in line 115: GRyt A265 26,0
Error in line 105: t4t59fOGP19 A231 149,3
Error in line 112: 6E2yCTpL S604 260,8
Error in line 134: NnF A265 193,3
Error in line 127: t4t59fOGP19 A850 67,9
Error in line 138: t4t59fOGP19 A265 32,1
Error in line 144: 6E2yCTpL A265 211,4
Error in line 146: POKjnMczzy A850 94,4
Error in line 151: 6E2yCTpL A850 29,7
Error in line 150: fiSrRwi3c8f A231 90,7
Error in line 180: NnF A265 81,6
Error in line 185: GRyt S604 23,4
Error in line 187: t4t59fOGP19 A850 96,5
Error in line 190: t4t59fOGP19 A265 14,0
Error in line 200: GRyt A850 38,8
Error in line 206: GRyt A231 44,1
Error in line 207: GRyt A850 37,5
Error in line 212: NnF A265 36,6
Error in line 227: GRyt A231 61,8
Error in line 238: GRyt A850 25,5
Error in line 245: GRyt A850 6,1
